crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@251.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(3,4)) &> numrange(3.5,6);"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..53
    AExpr@7..53
      FuncCall@7..33
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "3"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "4"
      Ascii41@33..34 ")"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Op@36..38 "&>"
      Whitespace@38..39 " "
      FuncCall@39..53
        Ident@39..47 "numrange"
        Ascii40@47..48 "("
        AConst@48..51
          Fconst@48..51 "3.5"
        Ascii44@51..52 ","
        AConst@52..53
          Iconst@52..53 "6"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

