crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@256.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(3,4) &> nummultirange(numrange(3.5,6));"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..52
    AExpr@7..52
      FuncCall@7..19
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..17
          Iconst@16..17 "3"
        Ascii44@17..18 ","
        AConst@18..19
          Iconst@18..19 "4"
      Ascii41@19..20 ")"
      Whitespace@20..21 " "
      Op@21..23 "&>"
      Whitespace@23..24 " "
      FuncCall@24..52
        Ident@24..37 "nummultirange"
        Ascii40@37..38 "("
        FuncCall@38..52
          Ident@38..46 "numrange"
          Ascii40@46..47 "("
          AConst@47..50
            Fconst@47..50 "3.5"
          Ascii44@50..51 ","
          AConst@51..52
            Iconst@51..52 "6"
  Ascii41@52..53 ")"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

